# ChatRest

./: .gitignore  CMakeLists.txt  README.md  chat.db  launch.bat
Server/: CMakeLists.txt
Server/cmake/: external.cmake
Server/src/: main.cpp  src.cmake
Server/src/database/: database.cpp  database.h
Server/src/server/: server.cpp  server.h
Server/src/server/response_error_builder/: response_error_builder.cpp  response_error_builder.h
contracts/: openapi.yml
src/: main.cpp  src.cmake
src/database/: database.cpp  database.h
src/public/: chat.html  index.html  register.html
src/public/css/: chat.css  style.css
src/public/js/: auth.js  chat.js  utils.js
src/server/: server.cpp  server.h
src/server/response_converter/: response_converter.cpp  response_converter.h
src/server/response_error_builder/: response_error_builder.cpp  response_error_builder.h
src/sha256/: sha256.cpp
tests/: test.cpp  tests.cmake
tests/integration/: package-lock.json  package.json  playwright.config.js  real-time-communication.spec.js  run-tests.bat
